cluster-go/infrastructure/llm-legacy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: '-10'
