cluster-go/infrastructure/llm-legacy/deployment-deepspars.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: deepsparse
  namespace: llm
  labels:
spec:
  strategy:
    type: Recreate
  replicas: 0
  selector:
    matchLabels:
      app: deepsparse
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: deepsparse
        deployment: deepsparse
    spec:
      containers:
        - name: deepsparse
          image: "quay.io/rh_ee_cschmitz/openshift-deepsparse-llama:v1.8.0-Llama2-7b-chat-pruned50-quant-ds"
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 16
              memory: 10Gi
            requests:
              memory: 10Gi
              cpu: 8
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
