cluster-go/infrastructure/llm-legacy/service-3-8b.yaml
apiVersion: v1
kind: Service
metadata:
  name: granite-3-8b
  namespace: llm
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: granite-3-8b
    deployment: granite-3-8b
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
