cluster-go/infrastructure/llm-legacy/service-deepsparse.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepsparse
  namespace: llm
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: deepsparse
    deployment: deepsparse
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
