cluster-go/infrastructure/llm-legacy/route-3-2b.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: granite-3-2b
  namespace: llm
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: granite-3-2b
    weight: 100
  wildcardPolicy: None
